Pretty functional at this point

--- a/templates/user_description.html
+++ b/templates/user_description.html
@@ -7,8 +7,8 @@
 <h1>Details of {{user.full_name()}}</h1>
 name: {{user.full_name()}}
 <img src="{{user.image_url}}" alt="user_image">
-<a href="/user/{{user.id}}/delete">EDIT USER</a>
-<a href="/user/{{user.id}}/edit">DELETE USER</a>
+<a href="/users/{{user.id}}/edit">EDIT USER</a>
+<a href="/users/{{user.id}}/delete">DELETE USER</a>
 
 
 
