--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -6,7 +6,7 @@ List Users
 {% block content %}
 <ul>
     {% for user in users %}
-    <li><a href="/users/user.id">{{user.full_name()}}</a></li>
+    <li><a href="/users/{{user.id}}">{{user.full_name()}}</a></li>
     {% endfor %}
 </ul>
 <a href="/users/new">Create User</a>
