--- a/templates/user_description.html
+++ b/templates/user_description.html
@@ -5,11 +5,12 @@
 
 {% block content %}
 <h1>Details of {{user.full_name()}}</h1>
-name: {{user.full_name()}}
-<img src="{{user.image_url}}" alt="user_image">
+<h3>name: {{user.full_name()}}</h3>
+<img src="{{user.image_url}}" alt="user_image" width="200">
+<div>
 <a href="/users/{{user.id}}/edit">EDIT USER</a>
 <a href="/users/{{user.id}}/delete">DELETE USER</a>
-
+</div>
 
 
 {% endblock %}
