Starting to test

--- a/templates/user_description.html
+++ b/templates/user_description.html
@@ -8,6 +8,7 @@
 <h3>name: {{user.full_name()}}</h3>
 <img src="{{user.image_url}}" alt="user_image" width="200">
 <div>
+<a href="/">GO HOME</a>
 <a href="/users/{{user.id}}/edit">EDIT USER</a>
 <a href="/users/{{user.id}}/delete">DELETE USER</a>
 </div>
