--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,15 @@
     Base Content
     {% endblock %}
 
+    {% if get_flashed_messages() %}
+    {% block flashed_messages%}
+    <ul>
+        {% for msg in get_flashed_messages() %}
+        <li>{{msg}}</li>
+        {% endfor %}
+    </ul>
+    {% endblock %}
+    {% endif %}
 </body>
 
 </html>
