--- a/templates/tag_details.html
+++ b/templates/tag_details.html
@@ -14,7 +14,7 @@ Tag {{tag.name}}
 
 <div>
     <a href="/">GO HOME</a>
-    <a href="/tags">all_tags</a>
+    <a href="/tags">ALL TAGS</a>
     <a href="/tags/{{tag.id}}/edit">EDIT TAG</a>
     <a href="/tags/{{tag.id}}/delete">DELETE TAG</a>
 </div>
