Added tag tests

--- a/templates/tag_new_form.html
+++ b/templates/tag_new_form.html
@@ -9,6 +9,7 @@ New Tag!
 <h1>New Tag!</h1>
 <form action="/tags/new" method="POST">
     {{ input(name='name', placeholder="Enter a New Tag Name", label="Name") }}
+    <a href="/tags">ALL TAGS</a>
     <input type="submit">
 </form>
 
